# ComfyUI-SeqImageLoader

./: AnimateDiffInpaint.py  SequentialImageLoader.py  __init__.py  dogcat-workflow.json  pyproject.toml  readme.md
.github/workflows/: publish.yml
js/: MagicWand.js  MaskEditorForVframes.js  main.js
sample_workflows/: cat2dog_with_animatediff.json  faceswap_masking_helper.json  wan_video_wrapper.json
