[project]
name = "comfyui-seqimageloader"
description = "This is an extension node for ComfyUI that allows you to load frames from a video in bulk and perform masking and sketching on each frame through a GUI."
version = "1.0.6"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/bruefire/ComfyUI-SeqImageLoader"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bruefire"
DisplayName = "ComfyUI-SeqImageLoader"
Icon = "docs/icon.png"
